sid morning commit

--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -6,7 +6,6 @@
     font-size: 4.5vw;
    
 }
-
 .font {
     font-family: "Source Sans Pro", serif ;
     color: #0b2d3b;
@@ -15,11 +14,9 @@
 .new_btn {
     background: #3295e5 !important;
 }
-
 #home_head {
     background: #00446b;
 }
-
 
 /* -----------------------------  ------------------------------ */
 
@@ -28,12 +25,10 @@
 .btn {
     margin: 2px;
 }
-
 .btn.signup {
     color: white;
     background-color: #ff8d47;
 }
-
 .container-logo{
     justify-content: right;
     padding: 20px;
@@ -44,8 +39,6 @@
 .collapse .navbar-collapse {
     justify-content: space-between;
 }
-
-
 /* ----------------------------------------------------------- */
 
 /* footer css start */
@@ -53,76 +46,30 @@ html, body {
   height: 100%;
   width: 100%;
 }
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background: #ffffff;
-}
 footer{
-    /*position: absolute;*/
-    bottom: 0;
-    left: 0;
-    right: 0;
     background: #3971cb;
-    height: auto;
     font-family: "Ariel", sans-serif;
     padding-top: 30px;
 }
-
-.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
 .footer-content h4{
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 400;
-    text-transform: capitalize;
     font-family: "Ariel", sans-serif;
     color: white;
-    line-height: 3rem;
 }
-
-/* sub code start */
-
-/* Style the form element  */
 form {
- /* border: 20px solid #0a3c8c;*/
-    width: 500px;
-    align-items: center;
-    justify-content: center;
     padding: 20px 100px 20px 120px;
-}.toprad{
-  border-radius: 10px 10px 0 0;
 }
-.container-botrad{
-  border-radius: 0 0 10px 10px;
-}
-/* Add some padding and a grey background color to containers */
-.subButton-container{
-  padding: 15px;
-  background-color: #ffffff;
-}
-/* Style the input elements and the submit button */
 input[type=text], input[type=submit] {
   width: 100%;
   padding: 5px;
   margin: 5px 0;
   border: 1px solid #ccc;
-  box-sizing: border-box;
 }
-/* Add margins to the checkbox */
 input[type=checkbox] {
     margin-bottom: 3px;
     margin-top: 12px;
 }
-/* Style the submit button */
 input[type=submit] {
   background-color: #3946b6;
   color: white;
@@ -131,19 +78,15 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #0d1557;
 }
-/* sub code end */
-
 .socials{
     list-style: none;
     display: flex;
-    /*align-items: center;*/
     justify-content: center;
     margin: 1rem 0 1rem 0;
 }
 .socials li{
     margin: 0 10px;
 }
-/*socials are white*/
 .socials a{
     text-decoration: none;
     color: #fff;
@@ -156,28 +99,22 @@ input[type=submit]:hover {
     color: #5edef7;
 }
 
-/*Footer content stuff */
-/*flex!*/
+
 footer .content .link-boxes{
-  width: 100%;
   display: flex;
   justify-content: space-around;
 }
-/*css for category thing*/
 .content .link-boxes .box .link_name{
   color: #fff;
     font-weight: bold;
   font-size: 18px;
   margin-top: 5px;
   margin-bottom: 10px;
-  position: relative;
 }
-/*removes stupid bullets*/
 .content .link-boxes .box li{
   margin: 6px 0;
   list-style: none;
 }
-/*css for links*/
 .content .link-boxes .box li a{
   color: #fff;
   font-size: 14px;
@@ -462,10 +399,8 @@ footer .content .link-boxes{
 }
 #costofbracelet{
     font-size: 25px;
-    padding: 10px;
-    padding-top:25px;
     font-weight:bold;
-    padding-bottom: 15px;
+    padding: 25px 10px 15px;
 }
 #addtobag{
 
